# pyrecon

./: .buildinfo  .gitignore  LICENSE  Pipfile  README.md  animateMatrix.py  createphantom-circle.py  genindex.html  index.html  makePhantom.py  objects.inv  plotMatrix.py  plotPhantom.py  pyproject.toml  reconTest-circle.py  reconTest-dot.py  reconTest-rods.py  reconstruct.py  reconstruction-MAP.py  reconstruction-MLEM.py  reconstruction.py  recontruction-MLEM.ipynb  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
2d-phantoms/: makeCirclePhantom.py  testCircle.py
CNR/: animateRecon.py  circle-recon-CNR.npz  plotCNR.py  reconContrast.py
MAP/: recontruction-MAP_EM.ipynb
MLEM/: MLEM_LogLikelihood.ipynb  createphantom-hotrod.py
MLEM-MPI/: MLEM-mpi.py  bg-phantom.npz  config.yml  contrast-phantom-nobg.npz  mlem-mpi.py  mpi-recon.out  slurm-run.sh
MLEM-mpi/: MLEM-mpi.py  setup-env.sh
data/: hotrod_phantom_data_180x180.npz  hotrod_phantom_data_180x180_projection.npz  hotrod_phantom_data_180x180_reconstructed.npz  hotrod_phantom_data_180x180_reconstruction.npz
dev/: generate_sysmat_hdf5.py  read_projection_npz.ipynb  read_reconstructed_npz.ipynb  read_sysmat_hdf5.ipynb
docs/: api-ref.rst  conf.py  index.rst
guide/: index.html  quick-start.html
input/: circle-phantom.npz
pyrecon/: README.md  __init__.py  proj.py  projector.py  projector_mpi.py  pyproject.toml  recon_mlem.py  reconstruct_mlem.py
pyrecon/mlem/: __init__.py
pyrecon/tests/: test_import.py  test_projection_nonmpi.py  test_recon_nonmpi.py
(+23 files in other folders)
